--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "astrotomic/laravel-translatable": "^11.12",
         "guzzlehttp/guzzle": "^7.2",
+        "joedixon/laravel-translation": "^2.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
